--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ retrofit = "2.9.0"
 runtimeLivedata = "1.7.7"
 firebaseAuthKtx = "23.1.0"
 navCompose = "2.8.6"
+firebaseFirestoreKtx = "25.1.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -48,6 +49,7 @@ firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx",
 play-services = {group = "com.google.android.gms", name = "play-services-auth", version = "21.3.0"}
 firebase-auth = {group = "com.google.firebase", name = "firebase-auth-ktx"}
 nav-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navCompose" }
+firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 
 [plugins]
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
